--- a/exercicios/ex022/imagens/fundo006.html
+++ b/exercicios/ex022/imagens/fundo006.html
@@ -9,11 +9,16 @@
 <style>
     body{
         height: 100vh;
-        background-color: black;
+        /*background-color: black;
         background-image: url('wallpaper002.jpg');
         background-repeat:no-repeat;
         background-size: cover;
         background-position: center center;
+        background-attachment: fixed;*/
+        
+        /*shorthand-background*/
+        background: black url('wallpaper002.jpg') center center no-repeat fixed; 
+        background-size: cover;
     }
     main{
         background-color: aliceblue;
@@ -30,6 +35,12 @@
 
     <main>
     <h1>Texte de imagem de fundo</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sed id consequatur officiis facere deleniti quis nostrum ad consectetur magnam, asperiores praesentium. Laborum optio suscipit ipsa corporis amet officiis dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus tempora labore quibusdam nam eligendi non sapiente omnis similique fugit deserunt incidunt eos atque laboriosam delectus, ipsa repellat, reprehenderit quia cupiditate. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste quos deserunt ea veniam illum, cumque tempore repellendus enim aspernatur sunt, id temporibus obcaecati consequuntur aliquid quibusdam molestiae provident animi asperiores.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sed id consequatur officiis facere deleniti quis nostrum ad consectetur magnam, asperiores praesentium. Laborum optio suscipit ipsa corporis amet officiis dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus tempora labore quibusdam nam eligendi non sapiente omnis similique fugit deserunt incidunt eos atque laboriosam delectus, ipsa repellat, reprehenderit quia cupiditate. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste quos deserunt ea veniam illum, cumque tempore repellendus enim aspernatur sunt, id temporibus obcaecati consequuntur aliquid quibusdam molestiae provident animi asperiores.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sed id consequatur officiis facere deleniti quis nostrum ad consectetur magnam, asperiores praesentium. Laborum optio suscipit ipsa corporis amet officiis dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus tempora labore quibusdam nam eligendi non sapiente omnis similique fugit deserunt incidunt eos atque laboriosam delectus, ipsa repellat, reprehenderit quia cupiditate. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste quos deserunt ea veniam illum, cumque tempore repellendus enim aspernatur sunt, id temporibus obcaecati consequuntur aliquid quibusdam molestiae provident animi asperiores.</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sed id consequatur officiis facere deleniti quis nostrum ad consectetur magnam, asperiores praesentium. Laborum optio suscipit ipsa corporis amet officiis dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus tempora labore quibusdam nam eligendi non sapiente omnis similique fugit deserunt incidunt eos atque laboriosam delectus, ipsa repellat, reprehenderit quia cupiditate. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste quos deserunt ea veniam illum, cumque tempore repellendus enim aspernatur sunt, id temporibus obcaecati consequuntur aliquid quibusdam molestiae provident animi asperiores.</p>
 
